<resources>
    <string name="app_name">BSSCarRent</string>
    <string name="title_car_list">Car list</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_login">Login</string>
    <string name="action_add_car">New</string>
    <string name="action_show_rentals">My Rentals</string>
    <string name="action_rented_cars">Rented</string>
    <string name="action_show_invoices">Invoices</string>
    <string name="action_pay_invoice">Pay</string>
    <string name="action_edit_carinfo">Edit</string>
    <string name="action_delete_car">Delete</string>
    <string name="action_show_car">Show</string>
    <string name="action_backtocar">Back</string>
    <string name="action_confirm_reservation">Confirm</string>
    <string name="action_add_photo">Add photo</string>
    <string name="action_save_car">Save</string>
    <string name="action_rented">Rented</string>
    <string name="action_show_my_rentals">My Rentals</string>
    <string name="action_reserve_car">Reserve</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="menu_car_list">Car list</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Car Rental Made Easy</string>
    <string name="nav_header_subtitle">Avans Informatica</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="empty_carmodel">Model</string>
    <string name="empty_carbrand">Brand</string>
    <string name="empty_carbuildyear">Construction year</string>
    <string name="empty_carcolor">Color</string>
    <string name="empty_cartype">Type</string>
    <string name="empty_carprice">Price</string>
    <string name="empty_cartransmission">Transmission</string>
    <string name="car_model_label">Model</string>
    <string name="car_buildyear_label">Buildyear</string>
    <string name="car_color_label">Color</string>
    <string name="car_transmission_label">Transmission</string>
    <string name="car_cartype_label">Car type</string>
    <string name="car_price_label">Price/km €</string>
    <string name="car_initialcost_label">Initial cost €</string>
    <string name="car_initialcost">500</string>
    <string name="car_priceperhour_label">Price/hour €</string>
    <string name="car_priceperhour">2</string>
    <string name="car_kilometersdistance">\?</string>
    <string name="car_kilometersdistance_label">Distance to car</string>
    <string name="car_fueltype_label">Fuel</string>
    <string name="car_fueltype">\?</string>
    <string name="car_detail_car_owner_label">Owned by:</string>
    <string name="car_brand_label">Brand:</string>
    <string name="car_apk_label">MOT up to:</string>
    <string name="car_priceperkilometer_label">Price/kilometer:</string>
    <string name="car_hireprice_label">Price for hire:</string>
    <string name="car_current_kilometers">Current kilometers:</string>
    <string name="car_button_rental_options">Rental options</string>
    <string name="car_prices_sum_label">Total price:</string>
    <string name="car_type_combustion">Combustion</string>
    <string name="car_type_fuel_cell">Fuel cell</string>
    <string name="car_type_electric">Electric</string>
    <string name="fuel_type_gasoline">Gasoline</string>
    <string name="fuel_type_diesel">Diesel</string>
    <string name="car_type_gas">Gas</string>
    <string name="car_detail_owner">Owner</string>
    <string name="car_edit_save">Save</string>
    <string name="rental_reserved_from">Reserved from</string>
    <string name="rental_reserved_until">Reserved until</string>
    <string name="rental_km_package">km amount</string>
    <string name="order">Order</string>
    <string name="select_a_date">Select a date</string>
    <string name="rental_list_select_rental_type">Rental type</string>
    <string name="menu_rental_list">Rental list</string>
    <string name="menu_invoice">Invoice</string>
    <string name="invoice_id">Invoice number:</string>
    <string name="empty_invoiceid">-</string>
    <string name="menu_invoices">Invoices</string>
    <string name="invoice_initialcost">Initial cost</string>
    <string name="empty_invoiceinitialcost">-</string>
    <string name="invoice_mileagetotal">Mileage total</string>
    <string name="empty_invoicemileagetotal">-</string>
    <string name="invoice_mileagecosts">Mileage costs</string>
    <string name="empty_invoicemileagecosts">-</string>
    <string name="invoice_kmpackage">km package</string>
    <string name="empty_invoicekmpackage">-</string>
    <string name="invoice_totalprice">Total price</string>
    <string name="empty_invoicetotalprice">-</string>
    <string name="invoice_totalhoursused">Hours used</string>
    <string name="empty_invoicetotalhoursused">-</string>
    <string name="invoice_totalhourprice">Total hour price</string>
    <string name="empty_invoicetotalhourprice">-</string>
    <string name="empty_invoiceispayd">-</string>
    <string name="pay_invoice_button_state">GONE</string>
    <string name="invoice_payment_text">Invoice payment</string>
    <string name="invoice_payment_text_warning">With clicking pay you accept to make use of your debt card.</string>
    <string name="now_setting_from">Now setting from</string>
    <string name="now_setting_until">Now setting until</string>
    <string name="time_span_taken">This time span is already taken. Please change your time.</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_infix">Infix</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_international_code">Int. code</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_birth_date">Birthdate</string>
    <string name="menu_own_cars_list">Owned cars</string>
    <string name="invoice_total_price">Total amount:</string>
    <string name="invoiceid">-</string>
    <string name="invoicetotalprice">-</string>
    <string name="invoice_total_price_label">Total</string>
    <string name="invoicecurrency">€</string>
    <string name="action_back">Back</string>
    <string name="is_paid_label">Invoice is</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="auto_mode">Auto mode</string>
    <string name="theme_selector_title">Theme selector</string>
    <string name="auto_theme">Auto theme</string>
    <string name="car_edit">Edit car</string>
    <string name="car_detail">Car details</string>
    <string name="rental_create">Create rental</string>
    <string name="user_phone_number">Phone number</string>
    <string name="user_last_name">Last name</string>
    <string name="user_infix">Infix</string>
    <string name="user_first_name">First name</string>
    <string name="user_detail">User details</string>
    <string name="rental_datetime_from">Reserved from:</string>
    <string name="rental_datetime_until">Reserved until:</string>
    <string name="rental_delivered_at">Delivered at:</string>
    <string name="rental_picked_up">Picked up:</string>
    <string name="rental_total_mileage">Total mileage:</string>
    <string name="rental_drivingstyle_score">Driving-style score:</string>
    <string name="rental_tenant">Tenant</string>
    <string name="rental_owner">Owner</string>
    <string name="rental_car">Car</string>

    <string name="rental_deliver_button">Deliver car</string>
    <string name="rental_cancel_button">Cancel</string>
    <string name="rental_pickup_car_button">Mark car as picked up</string>

    <string name="rental_create_price_warning">Note: these prices are not final. Damage, bringing the car back late, driving more kilometers than booked and misbehavior may result in financial penalties.</string>
    <string name="rental_create_place_reservation">Place reservation</string>
    <string name="rental_price_per_km">Price/km</string>
    <string name="rental_amount_of_kilometers">Amount of kilometers:</string>
    <string name="rental_create_end_warning">Return before this time, or penalties may apply</string>
    <string name="rental_create_start_warning">Pick up on/after this time</string>
    <string name="rental_slot_available">Available during this time.</string>
    <string name="rental_create_slot_unavailable">Please pick a time and date that isn\'t between this time.</string>
    <string name="rental_create_slot_unavailable_at_time">This car is already rented out during this time:</string>
    <string name="change">Change</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="rental_initial_cost">Initial cost:</string>
    <string name="rental_create_total_price">Total price:</string>
    <string name="rental_create_calculated_km_price">Calculated km price:</string>
    <string name="my_rentals">My rentals</string>
    <string name="owned_rentals">Owned rentals</string>
    <string name="yourcarishere">Your car location</string>
    <string name="erroroccurred">Error</string>
    <string name="youarehere">Your location</string>
    <string name="google_maps_key" translatable="false">key</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="map">Map</string>
    <string name="languageselector">Language Selector</string>
    <string name="current_language">Language</string>
    <string name="current_language_value">-</string>
    <string name="register">Register</string>

    <string-array name="languages">
        <item>Select language</item>
        <item>en</item>
        <item>nl</item>
    </string-array>
    <string name="rental_detail">Rental detail</string>
    <string name="car_license_plate">License plate:</string>
    <string name="car_create_button">Create</string>
    <string name="my_invoices">My invoices</string>
    <string name="owned_invoices">Owned invoices</string>
    <string name="location">Location</string>
    <string name="view_map">View map</string>
    <string name="new_mileage">New mileage</string>
    <string name="current_rental">Current</string>
    <string name="car_create">Create car</string>
</resources>