<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_car_list"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_car_list" />
        <item
            android:id="@+id/nav_own_car_list"
            android:icon="@drawable/unknown_car"
            android:title="@string/menu_own_cars_list" />
        <item
            android:id="@+id/nav_rentals"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_rental_list" />
        <item
            android:id="@id/nav_invoices"
            android:icon="@drawable/ic_menu_invoice"
            android:title="@string/menu_invoice" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login_button"
            android:title="Login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@android:drawable/ic_menu_add"
            android:title="Register" />

        <item
            android:id="@+id/switch_auto_theme"
            android:title="@string/auto_theme"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

        <item
            android:id="@+id/switch_dark_theme"
            android:title="@string/dark_mode"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

    </group>
</menu>