<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/lightGray"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/invoice_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/invoice_id"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/invoice_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoiceid"
                app:layout_constraintStart_toEndOf="@id/invoice_id_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/invoice_initialcost_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/invoice_initialcost"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/invoice_id_label" />

            <TextView
                android:id="@+id/invoice_initialcost_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoiceinitialcost"
                app:layout_constraintStart_toEndOf="@id/invoice_initialcost_label"
                app:layout_constraintTop_toTopOf="@id/invoice_initialcost_label" />

            <TextView
                android:id="@+id/invoice_mileagetotal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/invoice_mileagetotal"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/invoice_initialcost_label" />

            <TextView
                android:id="@+id/invoice_mileagetotal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoicemileagetotal"
                app:layout_constraintStart_toEndOf="@id/invoice_mileagetotal_label"
                app:layout_constraintTop_toTopOf="@id/invoice_mileagetotal_label" />

            <TextView
                android:id="@+id/invoice_mileagecosts_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/invoice_mileagecosts"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/invoice_mileagetotal_label" />

            <TextView
                android:id="@+id/invoice_mileagecosts_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoicemileagecosts"
                app:layout_constraintStart_toEndOf="@id/invoice_mileagecosts_label"
                app:layout_constraintTop_toTopOf="@id/invoice_mileagecosts_label" />

            <TextView
                android:id="@+id/invoice_kmpackage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/invoice_kmpackage"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/invoice_mileagecosts_label" />

            <TextView
                android:id="@+id/invoice_kmpackage_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoicekmpackage"
                app:layout_constraintStart_toEndOf="@id/invoice_kmpackage_label"
                app:layout_constraintTop_toTopOf="@id/invoice_kmpackage_label" />

            <TextView
                android:id="@+id/invoice_totalprice_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/invoice_totalprice"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/invoice_kmpackage_label" />

            <TextView
                android:id="@+id/invoice_totalprice_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoicetotalprice"
                app:layout_constraintStart_toEndOf="@id/invoice_totalprice_label"
                app:layout_constraintTop_toTopOf="@id/invoice_totalprice_label" />

            <TextView
                android:id="@+id/invoice_totalhoursused_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/invoice_totalhoursused"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/invoice_totalprice_label" />

            <TextView
                android:id="@+id/invoice_totalhoursused_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoicetotalhoursused"
                app:layout_constraintStart_toEndOf="@id/invoice_totalhoursused_label"
                app:layout_constraintTop_toTopOf="@id/invoice_totalhoursused_label" />

            <TextView
                android:id="@+id/invoice_totalhourprice_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/invoice_totalhourprice"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/invoice_totalhoursused_label" />

            <TextView
                android:id="@+id/invoice_totalhourprice_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="280dp"
                android:maxLines="1"
                android:text="@string/empty_invoicetotalhourprice"
                app:layout_constraintStart_toEndOf="@id/invoice_totalhourprice_label"
                app:layout_constraintTop_toTopOf="@id/invoice_totalhourprice_label" />


            <TextView
                android:id="@+id/invoice_ispayd_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="144dp"
                android:text="@string/empty_invoiceispayd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/pay_invoice_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/action_pay_invoice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>