<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.invoice.InvoiceDetailFragment">

    <TextView
        android:id="@+id/text_invoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:text="@string/invoice_payment_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/invoice_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:text="@string/invoice_id"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_invoice"
        app:layout_constraintTop_toTopOf="@id/text_invoice" />

    <TextView
        android:id="@+id/invoice_detail_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="58dp"
        android:maxWidth="280dp"
        android:maxLines="1"
        android:text="@string/invoiceid"
        app:layout_constraintStart_toEndOf="@id/invoice_id_label"
        app:layout_constraintTop_toTopOf="@id/text_invoice" />

    <TextView
        android:id="@+id/invoice_detail_total_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="258dp"
        android:text="@string/invoice_total_price_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_invoice"
        app:layout_constraintTop_toTopOf="@id/text_invoice" />

    <TextView
        android:id="@+id/invoice_detail_total_price_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="248dp"
        android:maxWidth="280dp"
        android:maxLines="1"
        android:textSize="32dp"
        android:text="@string/invoicecurrency"
        app:layout_constraintStart_toEndOf="@id/invoice_detail_total_price_label"
        app:layout_constraintTop_toTopOf="@id/text_invoice" />

    <TextView
        android:id="@+id/invoice_detail_total_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="248dp"
        android:maxWidth="280dp"
        android:maxLines="1"
        android:textSize="32dp"
        android:text="@string/invoicetotalprice"
        app:layout_constraintStart_toEndOf="@id/invoice_detail_total_price_currency"
        app:layout_constraintTop_toTopOf="@id/text_invoice" />


    <TextView
        android:id="@+id/text_invoice_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/invoice_payment_text_warning"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/pay_invoice_detail_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:text="@string/action_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/pay_invoice_detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:text="@string/action_pay_invoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>